@@ -1,3 +1,9 @@
+commit 6e0299d2e96bf03ad86b0e1fde199dbbc6c65552
+Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
+Date:   Wed May 8 12:55:52 2013 +0400
+
+    changed flavor
+
 commit 3848ef69620d9f7c1c3939a57f419c8f97d1af85
 Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
 Date:   Tue Apr 30 21:50:15 2013 +0400
